--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
     <div class="container hero bg-main-color">
         <div class="row-short" style="margin-top: 25vh;">
-            <h1 style="color: #F9E616;">Coming soon</h1>
+            <h1 style="color: #266BCC;">Coming soon</h1>
             <div class="clock"></div>
             <div class="mouse">
                 <div class="wheel"></div>
