--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
                     <a href="index.html"><img src="img/logo.png" width='135' height='42' style="padding-top: 10px; padding-right: 2vw; padding-left: 2vw; max-height: 42px;"></a>
                 </b>
                 <ul id='ul'>
-                    <li><a href="story.html" class='btn'>IAN'S STORY</a></li>
                     <li><a href="" class='btn'>IAN'S VISION</a></li>
                     <li><a href="contact.html" class='btn'>GET IN TOUCH</a></li>
                     <li class="donate"><a href="donate.html"  class='btn donate'>DONATE</a></li>
@@ -57,6 +56,16 @@
             <div class="bold">IAN'S VISION</div>
             <div class="nonbold">We are in the battle for the future and the soul of Calgary. We choose hope over fear. Truth and transparency over lies. And unity over division. We treat each other with dignity, we leave nobody behind, and we give hate no safe harbour.</div>
             <div class="link"><a href="platform.html" class="btn platformbtn">This is what Ian believes in.</a></div>
+        </div>
+        <div class='story'>
+            <div style="float: left;"> 
+                <div class='rep'>A perfect representation of hard working Calgarians...</div>
+                <div class='intro'>Father of 3, Husband, Oil and gas engineer, Immigrant.</div>
+                <div class="link1"> <a href='story.html' class='btn storybtn'>Read Ian's story</a></div>
+            </div>
+            <div class='first'>
+                <img src="img/collagenew.png" alt="" class='second'>
+            </div>
         </div>
         <footer class="container bg-main-color">
             <div class="row-short">
