--- a/platform.html
+++ b/platform.html
@@ -4,6 +4,7 @@
     <head>
         <title>Candidate Website</title>
         <link rel = "stylesheet" href = "styles.css">
+        <link rel="stylesheet" href="donatestyles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="script.js"></script>
         <link href="//db.onlinewebfonts.com/c/10d0501adc787b5f33eec4eefdd9b5b1?family=Brother+1816" rel="stylesheet" type="text/css"/>
@@ -25,6 +26,9 @@
     <link rel="stylesheet" href="./css/toast.css">
     <!-- custom -->
     <link rel="stylesheet" href="./css/custom.css">
+    <link rel="stylesheet" href="contactstyles.css">
+    <script src="script1.js"></script>
+
     </head>
 
     <body>
@@ -39,33 +43,15 @@
                     <a href="index.html"><img src="img/logo.png" width='135' height='42' style="padding-top: 10px; padding-right: 2vw; padding-left: 2vw; max-height: 42px;"></a>
                 </b>
                 <ul id='ul'>
-                    <li><a href="platform.html" class='btn'>IAN'S VISION</a></li>
+                    <li><a href="" class='btn'>IAN'S VISION</a></li>
                     <li><a href="contact.html" class='btn'>GET IN TOUCH</a></li>
                     <li class="donate"><a href="donate.html"  class='btn donate'>DONATE</a></li>
                 </ul>
             </div>
         </div>
-
-
-        <div class='front-page' style="height: 750px;">
-            <img src="img/better.png" style="height: 750px;  width: 1500px; margin-left: auto; margin-right: auto; left: 50%;
-            margin-left: -700px;
-            position:absolute;" >
-        </div>
-        <div class="vision">
-            <div class="bold">IAN'S VISION</div>
-            <div class="nonbold">We are in the battle for the future and the soul of Calgary. We choose hope over fear. Truth and transparency over lies. And unity over division. We treat each other with dignity, we leave nobody behind, and we give hate no safe harbour.</div>
-            <div class="link"><a href="platform.html" class="btn platformbtn">This is what Ian believes in.</a></div>
-        </div>
-        <div class='story'>
-            <div style="float: left;"> 
-                <div class='rep'>A perfect representation of hard working Calgarians...</div>
-                <div class='intro'>Father of 3, Husband, Oil and gas engineer, Immigrant.</div>
-                <div class="link1"> <a href='story.html' class='btn storybtn'>Read Ian's story</a></div>
-            </div>
-            <div class='first'>
-                <img src="img/collagenew.png" alt="" class='second'>
-            </div>
+        <div>
+            <div class='platform'>Chiang as mayor will</div>
+        
         </div>
         <footer class="container bg-main-color">
             <div class="row-short">
@@ -85,7 +71,6 @@
     </body>
     <script>
         window.onload = function() { browserChecker()};
-        
         var ua = navigator.userAgent.toLowerCase(); 
 
         var ul = document.getElementById('ul');
