--- a/contact.html
+++ b/contact.html
@@ -50,8 +50,13 @@
             </div>
         </div>
         <div class="flex-container" style="height: 100vh;">
+            <div style="float: left;">
             <div class="flex-child"><div class="support">Get In Touch With Ian</div></div>
             <div class="supportnonbold">Please direct your emails to: <span style="color:#DB504A;" id='john1' class="john" onclick="copy(this)" >khchiang@yahoo.ca </span></div>
+            </div>
+            <div style="float: left; margin-left: 50px; margin-top: 200px;">
+                <svg xmlns="http://www.w3.org/2000/svg" width="200" height="200" viewBox="0 0 24 24" fill="none" stroke="#266BCC" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-mail"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
+            </div>
         </div>
         <footer class="container bg-main-color">
             <div class="row-short">
