--- a/donate.html
+++ b/donate.html
@@ -41,6 +41,7 @@
                     <a href="index.html"><img src="img/logo.png" width='135' height='42' style="padding-top: 10px; padding-right: 2vw; padding-left: 2vw; max-height: 42px;"></a>
                 </b>
                 <ul id='ul'>
+                    <li><a href="story.html" class='btn'>IAN'S STORY</a></li>
                     <li><a href="" class='btn'>IAN'S VISION</a></li>
                     <li><a href="contact.html" class='btn'>GET IN TOUCH</a></li>
                     <li class="donate"><a href="donate.html"  class='btn donate'>DONATE</a></li>
