--- a/platform.html
+++ b/platform.html
@@ -66,7 +66,7 @@
                         <div>hello</div>
                         <div>hello</div>
                         <div>hello</div>
-                        <div>hello</div>
+                        <div>goodbye</div>
                     </div>
             </div>
             <div class="collapsediv" style="display: block;">
