--- a/platform.html
+++ b/platform.html
@@ -65,7 +65,7 @@
                         <div>hello</div>
                         <div>hello</div>
                         <div>hello</div>
-                        <div>hello</div>
+                        <div>goodbye</div>
                         <div>goodbye</div>
                     </div>
             </div>
