--- a/story.html
+++ b/story.html
@@ -52,6 +52,9 @@
         <div class='cardiv'>
             <img src="img/car.png" class='car'>
         </div>
+        <div class="ianstory">IAN'S STORY.</div>
+        <div>From Brunei to Calgary</div>
+        <div style="background-color: red; width: 100vw; height: 100vh; z-index: -1; position: absolute; top: 600px;"></div>
         <footer class="container bg-main-color">
             <div class="row-short">
                 <div class="contactsicons" style="margin-top: 40px;">
