--- a/platform.html
+++ b/platform.html
@@ -64,7 +64,7 @@
                     <div class="content">
                         <div>hello</div>
                         <div>hello</div>
-                        <div>hello</div>
+                        <div></div>
                         <div>goodbye</div>
                         <div>goodbye</div>
                     </div>
