--- a/story.html
+++ b/story.html
@@ -29,13 +29,13 @@
     </head>
 
     <body>
-       <div id="navbar" style="z-index:3; position: fixed; float: right;
+       <div id="navbar" style="z-index:5; position: fixed; float: right;
        top: 0;
        width: 100%; background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 16%, rgba(255,255,255,0.98) 52%, rgba(255,255,255,0.92) 73%, rgba(255,255,255,0.57) 90%, rgba(255,255,255,0) 100%); /* FF3.6-15 */
        background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(255,255,255,1) 16%,rgba(255,255,255,0.98) 52%,rgba(255,255,255,0.92) 73%,rgba(255,255,255,0.57) 90%,rgba(255,255,255,0) 100%); /* Chrome10-25,Safari5.1-6 */
        background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(255,255,255,1) 16%,rgba(255,255,255,0.98) 52%,rgba(255,255,255,0.92) 73%,rgba(255,255,255,0.57) 90%,rgba(255,255,255,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 ); /* IE6-9 */" >
-            <div class='container1'>
+            <div class='container1' >
                 <b href="index.html" rel='home button'>
                     <a href="index.html"><img src="img/logo.png" width='135' height='42' style="padding-top: 10px; padding-right: 2vw; padding-left: 2vw; max-height: 42px;"></a>
                 </b>
@@ -53,8 +53,29 @@
             <img src="img/car.png" class='car'>
         </div>
         <div class="ianstory">IAN'S STORY.</div>
-        <div>From Brunei to Calgary</div>
-        <div style="background-color: red; width: 100vw; height: 100vh; z-index: -1; position: absolute; top: 600px;"></div>
+        <div class='ianstory1'>From Brunei to Calgary to Teaching Taichi - with thousands of miles travelled in between.</div>
+        <div><img src="img/ianpage.png" alt="" srcset="" style="position: absolute; top: 150px; left: 56vw; width: 600px; height: 400px;"></div>
+        <div style="background-color: #1b5ab3; width: 100vw; height: 100vh; z-index: -1; position: absolute; top: 600px;"></div>
+        <div class='a1'>Humble Beginnings</div>
+        <div class='a2'>Born in Brunei</div>
+        <div class='a3' >A small country located in Asia</div>
+        <img src="img/world.png" style="position: absolute; top: 1000px; left: 50vw; width: 700px; height: 250px;" alt="">
+        <div class='b1'>Young, Talented, Driven.</div>
+        <div class="b2">First Real Job</div>
+        <div class='b3'>at Shell&copy; Liquified Natural Gas in 1975</div>
+        <div class='b3' style="top: 2100px;">Received Shell&copy; Company's Merit Award in 1977</div>
+        <div class='a1' style="top:2450px;">Seeking a Brighter Future</div>
+        <div class='a2' style="top: 2700px;">Ian Immigrates to Canada</div>
+        <div class='a3' style="top: 2810px;">with his newly wedded wife in 1987</div>
+        <div class='a2' style="top: 2900px; left:56vw; text-align: left;">Ian Starts a Family</div>
+        <div class='a3' style="top: 3010px; left:56vw; text-align: left;">Dad to 2 boys and a girl</div>
+        <img src="img/oil.jpg" alt="" style='position: absolute; top: 1900px; left: 56vw; width: 500px; height: 250px;'>
+        <img src="img/child.jpg" style='position: absolute; top: 2900px; left: 18vw; width: 400px; height: 250px;' alt="">
+        <div class='b1' style="top:3200px;">Rebuilding</div>
+        <div class='b2' style="top: 3300px;">Back to School</div>
+        <div class='b3' style='top: 3350px;'>Graduates from SAIT with An Engineering Design & Drafting Technology Degree</div>
+        <div style="background-color: #1b5ab3; width: 100vw; height: 100vh; z-index: -1; position: absolute; top: 300vh;"></div>
+        <div style="background-color: #1b5ab3; width: 100vw; height: 100vh; z-index: -1; position: absolute; top: 450vh;"></div>
         <footer class="container bg-main-color">
             <div class="row-short">
                 <div class="contactsicons" style="margin-top: 40px;">
