--- a/story.html
+++ b/story.html
@@ -55,7 +55,7 @@
         <div class="ianstory">IAN'S STORY.</div>
         <div class='ianstory1'>From Brunei to Calgary to Teaching Taichi - with thousands of miles travelled in between.</div>
         <div><img src="img/ianpage.png" alt="" srcset="" style="position: absolute; top: 150px; left: 56vw; width: 600px; height: 400px;"></div>
-        <div style="background-color: #1b5ab3; width: 100vw; height: 100vh; z-index: -1; position: absolute; top: 600px;"></div>
+        <div style="background-color: #1b5ab3; width: 100vw; height: 800px; z-index: -1; position: absolute; top: 600px;"></div>
         <div class='a1'>Humble Beginnings</div>
         <div class='a2'>Born in Brunei</div>
         <div class='a3' >A small country located in Asia</div>
@@ -74,8 +74,17 @@
         <div class='b1' style="top:3200px;">Rebuilding</div>
         <div class='b2' style="top: 3300px;">Back to School</div>
         <div class='b3' style='top: 3350px;'>Graduates from SAIT with An Engineering Design & Drafting Technology Degree</div>
-        <div style="background-color: #1b5ab3; width: 100vw; height: 100vh; z-index: -1; position: absolute; top: 300vh;"></div>
-        <div style="background-color: #1b5ab3; width: 100vw; height: 100vh; z-index: -1; position: absolute; top: 450vh;"></div>
+        <div style="background-color: #1b5ab3; width: 100vw; height: 800px; z-index: -1; position: absolute; top: 2400px;"></div>
+        <div style="background-color: #1b5ab3; width: 100vw; height: 800px; z-index: -1; position: absolute; top: 3600px;"></div>
+        <div class="a1" style="top: 3600px;">Job Hunting in Calgary's Economy</div>
+        <div class='a2' style='top: 3750px;'>Long List of Layoffs and Hires</div>
+        <div class="a3" style="top:3900px">- Reid Crowther & Partners Ltd.</div>
+        <div class="a3" style="top:3950px">- Water Treatment Plan Designs with Norman Well</div>
+        <div class="a3" style="top:4000px">- Bonnybrook Expansion Project</div>
+        <div class="a3" style="top:4050px">- Grocery Clerk at Safeway</div>
+        <div class="a3" style="top:4100px">- Pressure Vessel Design with Maloney Industries</div>
+        <div class='b1' style="top: 4400px;">Community Involvement</div>
+        <div class='b3' style="top: 4600px;">Started Teaching Taichi for Free to the Public in 2017</div>
         <footer class="container bg-main-color">
             <div class="row-short">
                 <div class="contactsicons" style="margin-top: 40px;">
