new changes in platform.html and iindex.css

--- a/platform.html
+++ b/platform.html
@@ -74,22 +74,22 @@
 
         <div class="styleOne">
             <div class="styleOneInner">
-                <img class="left" id="top" src="TechLogo.png" height="50" width="50">
+                <img class="leftimg" id="top" src="/img/TechLogo.png" height="50" width="50">
                 <p class="logo"></p>
-                <img class="right" id="top" src="TechLogo.png" height="50" width="50">
+                <img class="rightimg" id="top" src="/img/TechLogo.png" height="50" width="50">
 
                 <h2 class="one" id="main">Lets Work Smarter</h2>
 
                 <p id="nonBold">Calgary, before its fall from recession, was an engineering hub for local and multi-national cooperations that were willing to spend their time and resources on Calgarians and its engineers. Now, with fewer cooperations investing in Calgary, the simplest method to rebuild Calgary as an engineering hub is to...</p>
 
                 <p id="bold">Expanding the use of various technologies such as Information Technology (IT) and Artificial Intelligence (AI) within the city will eventually help Calgary become a dominating Engineering Hub again.</p>
-                <img id = "bottom" src="TechLogo.png" height="50" width="50">
+                <img id = "bottom" src="/img/TechLogo.png" height="50" width="50">
             </div>
 
             <div class="styleOneInner">
-                <img class="left" id="top" src="/img/Oil.png" height="50" width="50">
+                <img class="leftimg" id="top" src="/img/Oil.png" height="50" width="50">
                 <p class="logo"></p>
-                <img class="right" id="top" src="/img/Oil.png" height="50" width="50">
+                <img class="rightimg" id="top" src="/img/Oil.png" height="50" width="50">
 
                 <h2 class="two" id="main">Supporting Calgarians</h2>
 
@@ -100,9 +100,9 @@
             </div>
 
             <div class="styleOneInner">
-                <img class="left" id="top" src="/img/Connect.png" height="40" width="70">
+                <img class="leftimg" id="top" src="/img/Connect.png" height="40" width="70">
                 <p class="logo"></p>
-                <img class="right" id="top" src="/img/Connect.png" height="40" width="70">
+                <img class="rightimg" id="top" src="/img/Connect.png" height="40" width="70">
 
                 <h2 class="three" id="main">Staying Connected</h2>
 
@@ -113,9 +113,9 @@
             </div>
 
             <div class="styleOneInner">
-                <img class="left" id="top" src="/img/tool.png" height="50" width="50">
+                <img class="leftimg" id="top" src="/img/tool.png" height="50" width="50">
                 <p class="logo"></p>
-                <img class="right" id="top" src="/img/tool.png" height="50" width="50">
+                <img class="rightimg" id="top" src="/img/tool.png" height="50" width="50">
 
                 <h2 class="four" id="main">Make Calgary Even Better</h2>
 
