--- a/donate.html
+++ b/donate.html
@@ -48,11 +48,11 @@
                 </ul>
             </div>
         </div>
-        <div class="bigdonatewords">
-            <div class="support">Support Ian's Campaign</div>
-            <div class="supportnonbold">None of this could be possible without <span style="color:#DB504A;">your</span> support</div>
-            <div class="supportnonbold">Donation can be sent to <span style="color:#DB504A;" id='john1' class="john" onclick="copy(this)" >ianchiang818@gmail.com </span>via e-transfers</div>
-            <div class="conditions">Please keep in mind that this campaign can only accept donations from those living at an address within the province of Alberta, Canada. We also cannot accept donations from corporations, businesses, organizations and/or unions. Maximum donations per person are limited to $5,000, though we appreciate your generous support to make Ian's vision a reality.</div>
+        <div class="bigdonatewords" style="overflow: hidden;">
+            <div class="support" style="overflow: hidden;">Support Ian's Campaign</div>
+            <div class="supportnonbold" style="overflow: hidden;">None of this could be possible without <span style="color:#DB504A;">your</span> support</div>
+            <div class="supportnonbold" style="overflow: hidden;">Donation can be sent to <span style="color:#DB504A;" id='john1' class="john" onclick="copy(this)" >ianchiang818@gmail.com </span>via e-transfers</div>
+            <div class="conditions" style="overflow: hidden;">Please keep in mind that this campaign can only accept donations from those living at an address within the province of Alberta, Canada. We also cannot accept donations from corporations, businesses, organizations and/or unions. Maximum donations per person are limited to $5,000, though we appreciate your generous support to make Ian's vision a reality.</div>
         </div>
         <footer class="container bg-main-color">
             <div class="row-short">
