--- a/story.html
+++ b/story.html
@@ -70,7 +70,7 @@
         <div class='a2' style="top: 2900px; left:56vw; text-align: left;">Ian Starts a Family</div>
         <div class='a3' style="top: 3010px; left:56vw; text-align: left;">Dad to 2 boys and a girl</div>
         <img src="img/oil.jpg" alt="" style='position: absolute; top: 1900px; left: 56vw; width: 500px; height: 250px;'>
-        <img src="img/child.jpg" style='position: absolute; top: 2900px; left: 18vw; width: 400px; height: 250px;' alt="">
+        <img src="img/child.jpg" style='position: absolute; top: 2660px; left: 56vw; width: 400px; height: 250px; float: right;'  alt="">
         <div class='b1' style="top:3200px;">Rebuilding</div>
         <div class='b2' style="top: 3300px;">Back to School</div>
         <div class='b3' style='top: 3350px;'>Graduates from SAIT with An Engineering Design & Drafting Technology Degree</div>
