--- a/platform.html
+++ b/platform.html
@@ -106,9 +106,10 @@
 
                 <h2 class="three" id="main">Staying Connected</h2>
 
-                <p id="nonBold">To encourage public engagement and to bridge the gap between western and eastern cultures...</p>
+                <p id="nonBold">During the pandemic, many individuals have suffered from isolation as a result of minor lockdowns or quarantines placed for the public safety. In order to encourage public engagement and liberate those from isolation... </p>
 
-                <p id="bold">Multi-cultural events such as Martial Arts Competition will be promoted to link each community with each other. Improvements to local Drop-in centers will also be conducted for the same reasons.</p>
+                <p id="bold">Multi-cultural events such as Martial Arts Competition will be promoted to link each community with each other. Improvements to local Drop-in centers will also be conducted for the same reasons. 
+                </p>
                 <img id = "bottom" src="/img/Connect.png" height="40" width="70">
             </div>
 
@@ -119,9 +120,10 @@
 
                 <h2 class="four" id="main">Make Calgary Even Better</h2>
 
-                <p id="nonBold">Lastly, to make Calgary the safest and the cleanest city in the world...</p>
+                <p id="nonBold">Lastly, to make Calgary the safest and the cleanest city in the world, and even better,...
+                </p>
 
-                <p id="bold">Simple improvements in traffic flow regulations,  improve the safety structure of patios by encouraging new graduate university students to volunteer as inspectors, and to reinforce noise and exhaust pollution from vehicles.</p>
+                <p id="bold">Simple improvements in traffic flow regulations and noise/exhaust pollution from vehicles will be impleaded. While the safety structure of patios will be monitored by encouraging newly graduated university students to volunteer as inspectors.</p>
                 <img id = "bottom" src="/img/tool.png" height="50" width="50">
             </div>
     
