--- a/story.html
+++ b/story.html
@@ -77,14 +77,16 @@
         <div style="background-color: #1b5ab3; width: 100vw; height: 800px; z-index: -1; position: absolute; top: 2400px;"></div>
         <div style="background-color: #1b5ab3; width: 100vw; height: 800px; z-index: -1; position: absolute; top: 3600px;"></div>
         <div class="a1" style="top: 3600px;">Job Hunting in Calgary's Economy</div>
+        <img src="img/spruce.jpg" alt="" style='position: absolute; top: 4000px; left: 56vw; width: 400px; height: 300px; float: right;'>
         <div class='a2' style='top: 3750px;'>Long List of Layoffs and Hires</div>
-        <div class="a3" style="top:3900px">- Reid Crowther & Partners Ltd.</div>
-        <div class="a3" style="top:3950px">- Water Treatment Plan Designs with Norman Well</div>
-        <div class="a3" style="top:4000px">- Bonnybrook Expansion Project</div>
-        <div class="a3" style="top:4050px">- Grocery Clerk at Safeway</div>
-        <div class="a3" style="top:4100px">- Pressure Vessel Design with Maloney Industries</div>
-        <div class='b1' style="top: 4400px;">Community Involvement</div>
-        <div class='b3' style="top: 4600px;">Started Teaching Taichi for Free to the Public in 2017</div>
+        <div class="a3" style="top:3900px; width: 30vw; left:15vw;">- Reid Crowther & Partners Ltd.</div>
+        <div class="a3" style="top:3950px; width: 40vw; left:5vw;">- Water Treatment Plan Designs with Norman Well</div>
+        <div class="a3" style="top:4000px; width: 30vw; left:15vw;">- Bonnybrook Expansion Project</div>
+        <div class="a3" style="top:4050px; width: 30vw; left:15vw;">- Grocery Clerk at Safeway</div>
+        <div class="a3" style="top:4100px; width: 40vw; left:5vw;">- Pressure Vessel Design with Maloney Industries</div>
+        <div class='b1' style="top: 4400px;">Community</div>
+        <div class='b3' style="top: 4550px;">Started Teaching Taichi for Free to the Public in 2017</div>
+        <div class='b3' style="top: 4670px; left:56vw; text-align: left;">Announced candidacy for Calgary's mayor on February 1, 2021</div>
         <footer class="container bg-main-color">
             <div class="row-short">
                 <div class="contactsicons" style="margin-top: 40px;">
