--- a/platform.html
+++ b/platform.html
@@ -56,7 +56,7 @@
         </div>
         <div style="height: 270px;">
             <div class='boldideas'>Ideas Through Lived Experience </div>
-            <div class='buildback'>We aren't just going to rebuild what has worked in the past. This is our opportunity to build back great than ever through the lens of everyday Calgarians.</div>
+            <div class='buildback'>We aren't just going to rebuild what has worked in the past. This is our opportunity to build back greater than ever through the lens of everyday Calgarians.</div>
         </div>
         <div>
             <div class="collapsediv" style="display: block;">
