--- a/platform.html
+++ b/platform.html
@@ -60,25 +60,21 @@
         </div>
         <div>
             <div class="collapsediv" style="display: block;">
-                <button type="button" class="collapsible">Ian's plan for the green line</button>
+                <button type="button" class="collapsible">Ian's plan for ...</button>
                     <div class="content">
-                        <div>hello</div>
-                        <div>hello</div>
-                        <div>hello</div>
-                        <div>goodbye</div>
-                        <div>goodbye</div>
+                        This is where your platform is going to go
                     </div>
             </div>
             <div class="collapsediv" style="display: block;">
-                <button type="button" class="collapsible">Ian's plan for the green line</button>
+                <button type="button" class="collapsible">Ian's plan for ...</button>
                     <div class="content">
-                        hello
+                        This is where your platform is going to go
                     </div>
             </div>
             <div class="collapsediv" style="display: block;">
-                <button type="button" class="collapsible">Ian's plan for the green line</button>
+                <button type="button" class="collapsible">Ian's plan for ...</button>
                     <div class="content">
-                        hello
+                        This is where your platform is going to go
                     </div>
             </div>
         </div>
