--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
     <link rel="stylesheet" href="./css/toast.css">
     <!-- custom -->
     <link rel="stylesheet" href="./css/custom.css">
+    <script src="butter.js"></script>
     </head>
 
-    <body>
+    <body >
        <div id="navbar" style="z-index:3; position: fixed; float: right;
        top: 0;
        width: 100%; background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 16%, rgba(255,255,255,0.98) 52%, rgba(255,255,255,0.92) 73%, rgba(255,255,255,0.57) 90%, rgba(255,255,255,0) 100%); /* FF3.6-15 */
@@ -47,7 +48,7 @@
             </div>
         </div>
 
-
+    <div id='butter'>
         <div class='front-page' style="height: 750px;">
             <img src="img/better.png" style="height: 750px;  width: 1500px; margin-left: auto; margin-right: auto; left: 50%;
             margin-left: -700px;
@@ -82,8 +83,10 @@
                 </div>
             </div>
         </footer>
+    </div>
     </body>
     <script>
+        butter.init();
         window.onload = function() { browserChecker()};
         var ua = navigator.userAgent.toLowerCase();
         var ul = document.getElementById('ul');
