--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <div id='butter'>
         <div class='front-page' style="height: 750px;">
-            <img src="img/better.png" style="height: 750px;  width: 1500px; margin-left: auto; margin-right: auto; left: 50%;
+            <img src="img/better.png" loading='lazy' style="height: 750px;  width: 1500px; margin-left: auto; margin-right: auto; left: 50%;
             margin-left: -700px;
             position:absolute;" >
         </div>
@@ -66,7 +66,7 @@
                 <div class="link1"> <a href='story.html' class='btn storybtn'>Read Ian's story</a></div>
             </div>
             <div class='first'>
-                <img src="img/collagenew.png" alt="" class='second'>
+                <img src="img/collagenew.png" loading='lazy' alt="" class='second'>
             </div>
         </div>
         <footer class="container bg-main-color">
@@ -86,7 +86,6 @@
     </div>
     </body>
     <script>
-        butter.init();
         window.onload = function() { browserChecker()};
         var ua = navigator.userAgent.toLowerCase();
         var ul = document.getElementById('ul');
@@ -100,5 +99,12 @@
                 }
             }
         }
+
+        var options = {
+    wrapperId: 'customDefaultId',
+    wrapperDamper: 0.10,
+    cancelOnTouch: true
+  };
+  butter.init();
     </script>
 <html>
