--- a/story.html
+++ b/story.html
@@ -61,7 +61,7 @@
         <div class='a1'>Humble Beginnings</div>
         <div class='a2'>Born in Brunei</div>
         <div class='a3' >A small country located in Asia</div>
-        <img src="img/world.png" style="position: absolute; top: 1000px; left: 50vw; width: 700px; height: 250px;" alt="">
+        <img src="img/world.png" style="position: absolute; top: 1000px; left: 50vw; width: 700px; height: 250px;" alt="" loading='lazy'>
         <div class='b1'>Young, Talented, Driven.</div>
         <div class="b2">First Real Job</div>
         <div class='b3'>at Shell&copy; Liquified Natural Gas in 1975</div>
@@ -71,15 +71,15 @@
         <div class='a3' style="top: 2810px;">with his newly wedded wife in 1987</div>
         <div class='a2' style="top: 2900px; left:56vw; text-align: left;">Ian Starts a Family</div>
         <div class='a3' style="top: 3010px; left:56vw; text-align: left;">Dad to 2 boys and a girl</div>
-        <img src="img/oil.jpg" alt="" style='position: absolute; top: 1900px; left: 56vw; width: 500px; height: 250px;'>
-        <img src="img/child.jpg" style='position: absolute; top: 2660px; left: 56vw; width: 400px; height: 250px; float: right;'  alt="">
+        <img src="img/oil.jpg"  loading='lazy' alt="" style='position: absolute; top: 1900px; left: 56vw; width: 500px; height: 250px;'>
+        <img src="img/child.jpg" loading='lazy' style='position: absolute; top: 2660px; left: 56vw; width: 400px; height: 250px; float: right;'  alt="">
         <div class='b1' style="top:3200px;">Rebuilding</div>
         <div class='b2' style="top: 3300px;">Back to School</div>
         <div class='b3' style='top: 3350px;'>Graduates from SAIT with An Engineering Design & Drafting Technology Degree</div>
         <div style="background-color: #1b5ab3; width: 100vw; height: 800px; z-index: -1; position: absolute; top: 2400px;"></div>
         <div style="background-color: #1b5ab3; width: 100vw; height: 800px; z-index: -1; position: absolute; top: 3600px;"></div>
         <div class="a1" style="top: 3600px;">Job Hunting in Calgary's Economy</div>
-        <img src="img/spruce.jpg" alt="" style='position: absolute; top: 4000px; left: 56vw; width: 400px; height: 300px; float: right;'>
+        <img src="img/spruce.jpg"  loading='lazy' alt="" style='position: absolute; top: 4000px; left: 56vw; width: 400px; height: 300px; float: right;'>
         <div class='a2' style='top: 3750px;'>Long List of Layoffs and Hires</div>
         <div class="a3" style="top:3900px; width: 30vw; left:15vw;">- Reid Crowther & Partners Ltd.</div>
         <div class="a3" style="top:3950px; width: 40vw; left:5vw;">- Water Treatment Plan Designs with Norman Well</div>
