--- a/platform.html
+++ b/platform.html
@@ -56,31 +56,54 @@
         <div id='butter'>
         <div class="contactphoto">
         </div>
-        <div style="height: 270px;">
+        <div style="height: auto;">
             <div class='boldideas'>Ideas Through Lived Experience </div>
             <div class='buildback'>We aren't just going to rebuild what has worked in the past. This is our opportunity to build back greater than ever through the lens of everyday Calgarians.</div>
         </div>
         <div>
             <div class="collapsediv" style="display: block;">
-                <button type="button" class="collapsible">Ian's plan for ...</button>
+                <button type="button" class="collapsible">BUILD BACK BETTER: Ian's Plan for Calgary's Economic Recovery</button>
                     <div class="content">
                         This is where your platform is going to go
                     </div>
             </div>
             <div class="collapsediv" style="display: block;">
-                <button type="button" class="collapsible">Ian's plan for ...</button>
+                <button type="button" class="collapsible">build back better: Ian's plan for municipal transparency</button>
                     <div class="content">
                         This is where your platform is going to go
                     </div>
             </div>
             <div class="collapsediv" style="display: block;">
-                <button type="button" class="collapsible">Ian's plan for ...</button>
+                <button type="button" class="collapsible">build back better: Ian's plan for addressing Climate change</button>
                     <div class="content">
                         This is where your platform is going to go
                     </div>
+            </div>
+            <div class="collapsediv" style="display: block;">
+                <button type="button" class="collapsible">Build Back Better: Ian's plan for small and local businesses</button>
+            </div>
+            <div class="collapsediv" style="display: block;">
+                <button type="button" class="collapsible">Ian's plan for Combating Coronavirus (covid-19)</button>
+            </div>
+            <div class="collapsediv" style="display: block;">
+                <button type="button" class="collapsible">Ian's plan for equality</button>
+            </div>
+            <div class="collapsediv" style="display: block;">
+                <button type="button" class="collapsible">Ian's plan for combating homelessness</button>
+            </div>
+            <div class="collapsediv" style="display: block;">
+                <button type="button" class="collapsible">Ian's plan for transportation</button>
+            </div>
+            <div class="collapsediv" style="display: block;">
+                <button type="button" class="collapsible">Ian's plan for municipal services</button>
+            </div>
+             <div class="collapsediv" style="display: block;">
+                <button type="button" class="collapsible">Ian's plan for urban planning and housing</button>
+            </div>
+            <div class="collapsediv" style="display: block;">
+                <button type="button" class="collapsible">Ian's plan for cultural development</button>
             </div>
         </div>
-    
         <footer class="container bg-main-color">
             <div class="row-short">
                 <div class="contactsicons" style="margin-top: 40px;">
